--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/icon32.png">
     <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#d63384"/>
 </head>
 <body>
     <table class="table caption-top" style="width: 500px;">
